--- a/style.css
+++ b/style.css
@@ -6,3 +6,14 @@ div {
     background-color: rgb(201, 255, 243);
     border: 1px solid #f0f;
 }
+
+
+
+
+.btn-success {
+    background-color: #80047e;
+}
+
+.my-btn{
+    background-color: #ffc555;
+}
