--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body{
 }
 
 div {
-    background-color: rgb(201, 255, 243);
-    border: 1px solid #f0f;
+    /* background-color: rgb(201, 255, 243); */
+    /* border: 1px solid #f0f; */
 }
 
 
